# spot-equities

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  docker-compose.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  GrantMarketMaker.s.sol
contracts/src/: SpotVault.sol  SyntheticToken.sol
contracts/src/interfaces/: IPauserRegistry.sol  ISpotVault.sol  ISyntheticToken.sol
contracts/src/lib/: HyperCoreWriter.sol
contracts/test/: SpotVault.t.sol  SyntheticToken.t.sol
contracts/test/mocks/: MockERC20.sol  MockPauserRegistry.sol
docker/: Dockerfile.deployer  Dockerfile.service  deploy.sh  service-entrypoint.sh
service/: Cargo.toml
service/migrations/: 001_init.sql  002_kyc.sql
service/src/: config.rs  listener.rs  main.rs  treasury.rs
service/src/api/: mod.rs  routes.rs  sse.rs
service/src/db/: mod.rs  models.rs  queries.rs
service/src/dinari/: client.rs  types.rs
service/src/engine/: fulfiller.rs  mod.rs  settlement.rs  state.rs
